--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,8 +4,12 @@
 // -- Colors
 $dark-grey: #747570 !default;
 $dark-garnet: #751650 !default;
+$black: #000000;
+
+// -- Logo colors
 $yellow: #ffcc01 !default;
 $dark-blue: #365eaa !default;
+
 
 
 // -- Body-background
@@ -13,3 +17,19 @@ $body-bg-md-down: #bdbec1;
 $body-bg-md-up: #665f9e;
 
 // -- Typography
+
+
+// -- Pad-buttons
+$bg-but-pad: #565e6a;
+
+// -- Shadows
+$pad-but-shadow: #888;
+
+// -- Gradients
+// Pad-buttons
+$grad-grey-1: #565e6a;
+$grad-grey-2: #333;
+
+// Start-Select buttons
+$grad-grey-3: #0b0a1c;
+$grad-grey-4: #62636c;
