--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -21,9 +21,12 @@ $body-bg-md-up: #665f9e;
 
 // -- Pad-buttons
 $bg-but-pad: #565e6a;
+$bg-but-pad-2: #333a4a;
+
 
 // -- Shadows
 $pad-but-shadow: #888;
+$pad-but-text-shadow: #aaa;
 
 // -- Gradients
 // Pad-buttons
