--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 400px; height: 100%;">
+<div class="container">
   <mat-card class="gameboy-card">
     <mat-card-content>
       <div class="card square card-desk">
