--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -1,17 +1,3 @@
-h1 {
-    font-family: 'Pokemon Solid', sans-serif;
-    font-size: 5vh !important;
-    color: #ffcc01;
-    -webkit-text-stroke: 2px #365eaa;
-}
-
-.logo {
-    display: flex;
-    justify-content: center;
-    font-size: 7vh;
-    margin-bottom: 3vh;
-}
-
 .container {
     height: 100%;
 }
@@ -81,7 +67,7 @@ h1 {
             width: 33%;
             height: 33%;
             position: absolute;
-            background-color: #565e6a;
+            background-color: $bg-but-pad;
             cursor: pointer;
 
             i {
@@ -91,45 +77,25 @@ h1 {
                 text-align: center;
                 height: 100%;
                 font-size: 28px;
-                color: #333a4a;
-                text-shadow: 0px -0.5px 0px #aaa;
+                color: $bg-but-pad-2;
+                text-shadow: 0px -0.5px 0px $pad-but-text-shadow;
             }
         }
 
         .up {
             @include pad-buttons('top');
-
-            &:active {
-                background: linear-gradient(to top, #565e6a 0%, #333 100%);
-            }
-
         }
 
         .right {
             @include pad-buttons('right');
-
-            &:active {
-                background: linear-gradient(to right, #565e6a 0%, #333 100%);
-            }
-
-
         }
 
         .down {
             @include pad-buttons('down');
-
-            &:active {
-                background: linear-gradient(to bottom, #565e6a 0%, #333 100%);
-            }
         }
 
         .left {
-            
             @include pad-buttons('left');
-
-            &:active {
-                background: linear-gradient(to left, #565e6a 0%, #333 100%);
-            }
         }
 
         .middle {
@@ -175,7 +141,6 @@ h1 {
             height: 40px;
             line-height: 40px;
             border-radius: 50%;
-
             border-bottom: 2px solid $pad-but-shadow;
             box-shadow: -1px 1px 5px $black, 0px 0px 5px $black inset;
             text-shadow: 0px -1px 1px $pad-but-shadow;
@@ -186,7 +151,7 @@ h1 {
             transition: box-shadow 0.1s ease-out, border 0.1s ease-out, line-height 0.2s ease-out;
 
             &:active {
-                box-shadow: -1px 1px 1px black, 0px 0px 5px black inset;
+                box-shadow: -1px 1px 1px $black, 0px 0px 5px $black inset;
                 border-width: 0px;
                 line-height: 45px;
             }
