--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,30 @@
-<p>register works!</p>
+<div class="container-fluid inside-frame">
+    <div class="row">
+        <div class="col mx-auto">
+            <div class="card">
+                <div class="card-header">Sign up</div>
+                <div class="card-body d-flex flex-column">
+                    <form [formGroup]="signUpForm" (ngSubmit)="signUp(signUpForm.value)">
+                        <div class="form-group">
+                            <input type="text" formControlName="username" name="username" class="form-control"
+                                placeholder="Username" required autofocus />
+                        </div>
+                        <div class="form-group">
+                            <input type="password" formControlName="password" name="password" class="form-control"
+                                placeholder="Password" required />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" formControlName="email" name="email" class="form-control"
+                                placeholder="Email" required autofocus />
+                        </div>
+                        <div class="form-group">
+                            <input type="file" formControlName="avatar" name="avatar" class="form-control"
+                                placeholder="Avatar" required autofocus />
+                        </div>
+                        <input type="submit" class="btn btn-primary btn-block" value="Sign up"/>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
