--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -18,7 +18,7 @@
                                 placeholder="Email" required autofocus />
                         </div>
                         <div class="form-group">
-                            <input type="file" formControlName="avatar" name="avatar" class="form-control"
+                            <input type="file" (change)="uploadFile($event)" name="avatar" class="form-control"
                                 placeholder="Avatar" required autofocus />
                         </div>
                         <input type="submit" class="btn btn-primary btn-block" value="Sign up"/>
