--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -25,8 +25,8 @@
 .inside-frame {
     position: absolute;
     margin: 5vh;
-    max-width: 80vw;
-    max-height: 80vw;
+    max-width: 360px;
+    max-height: 360px;
     z-index: 3;
 }
 
