user Service done

--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -14,6 +14,6 @@
         <span>8 Victories</span>
       </p>
     </div>
-    <button class="btn btn-danger">Delete my profile</button>
+    <button class="btn btn-danger" (click)="deleteProfile(user._id)">Delete my profile</button>
   </div>
 </div>
