--- a/src/app/components/menu-game/menu-game.component.html
+++ b/src/app/components/menu-game/menu-game.component.html
@@ -4,9 +4,9 @@
             <img mat-card-image src="../assets/img/pokeDuelLogo.png">
         </div>
         <div class="menu">
-            <button mat-raised-button>New game</button>
+            <button mat-raised-button [routerLink]="['/new-game',userID]">New game</button>
             <button mat-raised-button>Continue</button>
-            <button mat-raised-button routerLink="/my-account">My account</button>
+            <button mat-raised-button [routerLink]="['/my-account',userID]">My account</button>
             <button mat-raised-button routerLink="/how-to-play">How to play</button> <!-- SOUND OPTIONS -->
             <button mat-raised-button routerLink="/credits">Credits</button>
             <button mat-raised-button (click)="logOut()">Log out</button>
