--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -1,20 +1,54 @@
 <div class="container-fluid inside-frame" style="overflow: scroll;">
     <div class="card d-flex flex-column " style="background-color: transparent; border: none;">
         <div class="card-body text">
-            <h2 class="card-title">How to play</h2>
-            <p class="card-text" >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-                not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
-                more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum
-            </p>
+            <h1 class="card-title">How to play</h1>
+            <p class="card-text">
+            <h2>¡Hola, pokedueler!</h2>
+
+            Bienvenido a la guía básica de supervivencia, 
+            la cual te dará unos pequeños tips para pasar rondas en
+            PokeDuel.
+
+            <h4>IDENTIFÍCATE</h4>
+            Es imprescindible que hagas login si tienes cuenta o bien te registres en el caso de no tenerla. ¡No te
+            llevará más de 30 segundos!
+
+            <h4>ESCOGE A TU EQUIPO</h4>
+
+            Una vez que te hayas identificado, necesitarás a tu equipo pokémon para poder combatir (o jugar, que queda
+            mejor). Para ello, se generarán tres pokémon aleatorios que conformarán tu equipo, el cual se enfrentará a
+            otros tres pokémon durante cada ronda.
+
+            <h4>TABLA DE TIPOS</h4>
+
+            En esta aplicación, solo tenemos pokémon de 3 tipos: agua, fuego y planta. Cada tipo es fuerte y débil a la
+            vez dependiendo de a quién nos enfrentemos. La tabla a tener en cuenta, pues, es la siguiente:<br>
+
+            Planta es fuerte contra agua pero débil contra fuego. <br>
+            Fuego es fuerte contra planta pero débil contra agua<br>
+            Agua es fuerte contra fuego pero débil contra planta<br>
+
+            <h4>JUEGO</h4>
+
+            Durante el juego tienes dos posibilidades con las que deberás trabajar: defender y atacar. Atacar quita un
+            tanto por ciento de salud; a la par, defender reduce el porcentaje de daño causado por el ataque.
+
+            En el caso de ventaja de tipos, se quitará un 20% adicional; puede ocurrir, también que un pokémon,
+            independientemente del tipo, propicie un golpe crítico. En este caso, se quitará un 20% adicional.
+
+            La ronda se gana si has vencido a tu oponente (pasas de ronda), y se genera uno nuevo con el que tendrás que
+            combatir si quieres seguir avanzando de ronda.
+
+            <h4>GUARDAR O CARGAR PARTIDA</h4>
+
+            Durante el transcurso del juego se podrá guardar o cargar partida. La primera opción actualiza tus
+            estadísticas (guarda tus progresos), y la segunda te permite cargar la última partida almacenada (guardada).
+
+            <h4>CERRAR SESIÓN</h4>
+
+            Siempre que quieras dejar de jugar, debes cerrar la sesión (recomendado). Sin embargo, si por un casual la
+            página se te cierra o surge cualquier imprevisto, podrás ingresar de nuevo a ella con la última ronda que se
+            haya guardado y sin iniciar de nuevo sesión
         </div>
     </div>
 </div>
