new game funcional

--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -1,19 +1,9 @@
 <div class="container-fluid inside-frame" style="overflow: scroll;">
     <div class="card d-flex flex-column " style="background-color: transparent; border: none;">
         <div class="card-body text">
-            <h2 class="card-title">Credits</h2>
-            <p class="card-text" >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-                not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
-                more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum
+            <h2 class="card-title">Creditos y Licencia</h2>
+            <p class="card-text">Este obra está bajo una licencia de Creative Commons Reconocimiento-SinObraDerivada 4.0
+                Internacional. por Kim Asiao y Santiago Martínez
             </p>
         </div>
     </div>
