--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -1,11 +1,11 @@
 //VARIABLES
-@import '../../../../variables';
+@import '../../../variables';
 
 .pokemon-left {
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 40vh;
+    top: 20vh;
 }
 
 .pokemon-right {
