--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
             <button mat-raised-button routerLink="/login">Log In</button>
             <button mat-raised-button routerLink="/register">Register</button>
             <button mat-raised-button>Options</button> <!-- SOUND OPTIONS -->
-            <button mat-raised-button>Credits</button>
+            <button mat-raised-button routerLink="/credits">Credits</button>
         </div>
     </section>
 </div>
