--- a/src/app/components/menu-game/menu-game.component.html
+++ b/src/app/components/menu-game/menu-game.component.html
@@ -4,9 +4,9 @@
             <img mat-card-image src="../assets/img/pokeDuelLogo.png">
         </div>
         <div class="menu">
-            <button mat-raised-button [routerLink]="['/new-game',userID]">New game</button>
-            <ng-container *ngIf="userStat.round < 3">
-                <button mat-raised-button [routerLink]="['/continue-game', userID, userStatID]">Continue</button>
+            <button mat-raised-button [routerLink]="['/game',userID]">New game</button>
+            <ng-container *ngIf="userStatExists">
+                <button mat-raised-button [routerLink]="['/continue-game', userID]">Continue</button>
             </ng-container>
             <button mat-raised-button [routerLink]="['/my-account',userID]">My account</button>
             <button mat-raised-button routerLink="/how-to-play">How to play</button> <!-- SOUND OPTIONS -->
