--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 @import '../mixins';
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../interface";
 
 .container {
     width: 400px;
