--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,8 +6,8 @@
         <div class="menu">
             <button mat-raised-button routerLink="/login">Log In</button>
             <button mat-raised-button routerLink="/register">Register</button>
-            <button mat-raised-button>Options</button> <!-- SOUND OPTIONS -->
             <button mat-raised-button routerLink="/credits">Credits</button>
+            <button mat-raised-button>Quit</button>
         </div>
     </section>
 </div>
