--- a/src/app/components/menu-game/menu-game.component.html
+++ b/src/app/components/menu-game/menu-game.component.html
@@ -9,7 +9,7 @@
                 <button mat-raised-button [routerLink]="['/continue-game', userID]">Continue</button>
             </ng-container>
             <button mat-raised-button [routerLink]="['/my-account',userID]">My account</button>
-            <button mat-raised-button routerLink="/how-to-play">How to play</button> <!-- SOUND OPTIONS -->
+            <button mat-raised-button routerLink="/how-to-play">How to play</button>
             <button mat-raised-button routerLink="/credits">Credits</button>
             <button mat-raised-button (click)="logOut()">Log out</button>
         </div>
