--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ body {
 h1 {
   font-family: 'Pokemon Solid', sans-serif;
   font-size: 5vh !important;
-  color: $yellow;
+  color: $dark-garnet;
   -webkit-text-stroke: 2px $dark-blue;
 }
 
