--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,7 @@
-<div class="inside-frame">
-    <div class="row">
+<div class="container-fluid inside-frame">
+    <div class="row" style="height:100%;">
         <div class="col mx-auto">
             <div class="card">
-                <div class="card-header">Log in</div>
                 <div class="card-body d-flex flex-column">
                     <form [formGroup]="logInForm" (ngSubmit)="logIn(logInForm.value)">
                         <div class="form-group">
@@ -13,7 +12,11 @@
                             <input type="password" formControlName="password" name="password" class="form-control"
                                 placeholder="Password" required />
                         </div>
-                        <input type="submit" class="btn btn-primary btn-block" value="Log in"/>
+
+                        <div class="d-flex justify-content-between">
+                            <input type="button" class="btn btn-secondary" value="Back" routerLink="/" />
+                            <input type="submit" class="btn btn-primary" value="Log in" />
+                        </div>
                     </form>
                 </div>
             </div>
