--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,21 @@
+@import '../../../variables';
+@import '../../../mixins';
+@import "../../../../node_modules/bootstrap/scss/bootstrap";
+
 .mat-stepper-vertical {
     background-color: transparent !important;
+}
+
+.card{
+    max-height: 360px;
+    max-width: 360px;
+    background: transparent;
+    border: none;
+}
+
+@include media-breakpoint-up(xl) {
+    .card{
+        height: 100%;
+        width: 100%;
+    }
 }
