--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid inside-frame">
-    <div class="row">
+    <div class="row" style="height:100%">
         <div class="col mx-auto">
             <div class="card">
                 <div class="card-body d-flex flex-column">
@@ -20,7 +20,10 @@
                             <input type="file" (change)="uploadFile($event)" name="avatar" class="form-control"
                                 placeholder="Avatar" required autofocus />
                         </div>
-                        <input type="submit" class="btn btn-primary btn-block" value="Sign up"/>
+                        <div class="d-flex justify-content-between">
+                            <input type="button" class="btn btn-secondary" value="Back" routerLink="/" />
+                            <input type="submit" class="btn btn-primary" value="Sign up" />
+                        </div>
                     </form>
                 </div>
             </div>
