fixed some buttons

--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid inside-frame" style="overflow: scroll;">
     <div class="card d-flex flex-column " style="background-color: transparent; border: none;">
         <div class="card-body text">
-            <h1 class="card-title">How to play</h1>
+            <img src="../../../assets/img/pokeDuelLogoTitle.png" style="width: 100%;"/>
             <p class="card-text">
             <h2>¡Hola, pokedueler!</h2>
 
@@ -51,4 +51,7 @@
             haya guardado y sin iniciar de nuevo sesión
         </div>
     </div>
+    <img src="../../../assets/img/back.png" (click)="goTo()" style="width: 5vh; margin: 1vh;"/>
 </div>
+
+<!-- TODO: translate this-->
