styles and functionallity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
           <div class="start" routerLink="/">START</div>
         </ng-container>
         <ng-container *ngIf="userLogged">
-          <div class="start" [routerLink]="['/menu-game',userID]">START</div>
+          <div class="start" [routerLink]="['/menu-game',userID]">MENU</div>
         </ng-container>
       </div>
     </mat-card-actions>
