--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,8 +21,8 @@
             width: 100%;
 
             .mat-card-image {
-                width: 25vh !important;
-                height: 10vh !important;
+                width: 170px !important;
+                height: 75px !important;
             }
         }
     }
