--- a/src/app/components/continue-game/continue-game.component.html
+++ b/src/app/components/continue-game/continue-game.component.html
@@ -1,21 +1,23 @@
 <div class="container-fluid inside-frame">
-    <mat-grid-list cols="2" rowHeight="360px">
-        <mat-grid-tile *ngIf="pokemonLeft.life > 0" style="display: flex;">
+    <mat-grid-list cols="2">
+        <mat-grid-tile *ngIf="pokemonLeft.life > 0" style="display: flex; height: 100%;">
             <div class="pokemon-left">
                 <p>{{ pokemonLeft.name }}</p>
                 <mat-progress-bar mode="determinate" :value="{{ pokemonLeft.life }}"></mat-progress-bar>
                 <img :src="{{ pokemonLeft.imgBack }}" class="card-img" alt="pokemon-left">
-                <div class="example-button-row" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0" style="display: flex;">
-                    <button mat-button [disabled]="isDisabled" (click)="attack()">Attack</button>
-                    <button mat-button [disabled]="isDisabled" (click)="defense()">Defense</button>
-                </div>
             </div>
         </mat-grid-tile>
-        <mat-grid-tile *ngIf="pokemonRight.life > 0">
+        <mat-grid-tile *ngIf="pokemonRight.life > 0" style="height: 100%;">
             <div class="pokemon-right">
-                <p>{{ pokemonRight.name }}</p>
-                <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
-                <img :src="{{ pokemonRight.imgFront }}" class="card-img" alt="pokemon-left">
+                <div class="d-flex flex-column" style="align-items: flex-end; height: 100%;">
+                    <p>{{ pokemonRight.name }}</p>
+                    <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
+                    <img :src="{{ pokemonRight.imgFront }}" class="card-img" alt="pokemon-left">
+                </div>
+                <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
+                    <button mat-button [disabled]="isDisabled" (click)="attack()"><img src="../../../assets/img/espada.png" style="width: 35px;">Attack</button>
+                    <button mat-button [disabled]="isDisabled" (click)="defense()"><img src="../../../assets/img/escudo.png" style="width: 35px;">Defense</button>
+                </div>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
