--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -1,5 +1,5 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
-
+@import "variables";
 .container {
     height: 100%;
 }
@@ -31,11 +31,6 @@
 }
 
 .a-b {
-
-    .a,
-    .b {
-        background-color: $dark-garnet;
-    }
 
     .a {
         top: 15px;
@@ -213,8 +208,17 @@
         position: absolute;
         margin: 5vh;
         z-index: 3;
-        height: 58vh;
+        height: 440px;
     }
+
+    .a, .b {
+        background-color: $dark-grey;
+    }
+
+    .mat-card {
+        box-shadow: none;
+    }
+
 }
 
 @include media-breakpoint-down(lg) {
@@ -225,4 +229,10 @@
         height: 360px;
         z-index: 3;
     }
+
+    .a,
+    .b {
+        background-color: $dark-garnet;
+    }
+    
 }
