--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -1,8 +1,7 @@
 <div class="container-fluid inside-frame">
     <div class="row">
-        <div class="col mx-auto">
+        <div class="col mx-auto inputs-lg">
             <div class="card">
-                <div class="card-header">Edit form</div>
                 <div class="card-body d-flex flex-column">
                     <form [formGroup]="editForm" (ngSubmit)="editUser(editForm.value)">
                         <div class="form-group">
@@ -21,7 +20,10 @@
                             <input type="file" (change)="uploadFile($event)" name="avatar" class="form-control"
                                 placeholder="Avatar" required autofocus />
                         </div>
-                        <input type="submit" class="btn btn-primary btn-block" value="Update profile" />
+                        <div class="d-flex justify-content-between">
+                        <input type="button" class="btn btn-secondary" value="Back" [routerLink]="['/my-account',user._id]"/>
+                        <input type="submit" class="btn btn-primary" value="Update profile"/>
+                    </div>
                     </form>
                 </div>
             </div>
