--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid inside-frame">
     <div class="row" style="height:100%;">
-        <div class="col mx-auto">
+        <div class="col mx-auto inputs-lg">
             <div class="card">
                 <div class="card-body d-flex flex-column">
                     <form [formGroup]="logInForm" (ngSubmit)="logIn(logInForm.value)">
