can be release v.0.1

--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -8,5 +8,13 @@
         </div>
     </div>
 
-    <button class="btn btn-secondary" routerLink="">Back</button>
+    <div>
+        <ng-container *ngIf="userLogged">
+            <button class="btn btn-secondary" [routerLink]="['/menu-game,userID']">Back</button>
+        </ng-container>
+        <ng-container *ngIf="!userLogged">
+            <button class="btn btn-secondary" routerLink="/">Back</button>
+        </ng-container>
+    </div>
+
 </div>
