--- a/src/app/components/options/options.component.scss
+++ b/src/app/components/options/options.component.scss
@@ -1,5 +1,10 @@
 //VARIABLES
 @import '../../../variables';
+@import '../../../mixins';
+@import "../../../../node_modules/bootstrap/scss/bootstrap";
+
+//FIXME: fix the color of the button
+$secondary: $secondary;
 
 .mat-slider-thumb-container {
     .mat-slider-thumb {
@@ -35,7 +40,5 @@
             width: 25vh;
         }
     }
-
-
 
 }
