--- a/src/app/components/continue-game/continue-game.component.scss
+++ b/src/app/components/continue-game/continue-game.component.scss
@@ -59,6 +59,16 @@
     width: 120px;
 }
 
+.pokemon-name{
+    background-color: $black;
+    border-radius: 1vh;
+    width: 20vh;
+    color: $white;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
 
 @include media-breakpoint-up(xl) {
     .card-img {
