--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -5,12 +5,15 @@
         </div>
         <div class="menu">
             <div>
-                <span>Background music</span>
-                <mat-slider min="1" max="100" step="0.5" value="50"></mat-slider>
-                <span>Sound effects</span>
-                <mat-slider min="1" max="100" step="0.5" value="50"></mat-slider>
-                <span>Pokemon cries</span>
-                <mat-slider min="1" max="100" step="0.5" value="50"></mat-slider>
+                <div>
+                    <span>Background music</span><mat-slider min="1" max="100" step="0.5" value="50"></mat-slider>
+                </div>
+                <div>
+                    <span>Sound effects</span><mat-slider min="1" max="100" step="0.5" value="50"></mat-slider>
+                </div>
+                <div>
+                    <span>Pokemon cries</span><mat-slider min="1" max="100" step="0.5" value="50"></mat-slider>
+                </div>
             </div>
             <div>
                 <ng-container *ngIf="userLogged">
