--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,10 +8,15 @@
                             <input type="text" formControlName="username" name="username" class="form-control"
                                 placeholder="Username" required autofocus />
                         </div>
-                        <div class="form-group">
-                            <input type="password" formControlName="password" name="password" class="form-control"
-                                placeholder="Password" required />
+
+                        <div class="form-group d-flex">
+                            <input [type]="hide ? 'password' : 'text'" formControlName="password" name="password" class="form-control"
+                            placeholder="Password" required />
+                            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            </button>
                         </div>
+
                         <div class="form-group">
                             <input type="text" formControlName="email" name="email" class="form-control"
                                 placeholder="Email" required autofocus />
@@ -25,6 +30,7 @@
                             <input type="submit" class="btn btn-primary" value="Sign up" />
                         </div>
                     </form>
+                    <input [(ngModel)]="error" class="error-input"/>
                 </div>
             </div>
         </div>
