--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -2,6 +2,7 @@
     <div class="card d-flex flex-column " style="background-color: transparent; border: none;">
         <div class="card-body text">
             <h2 class="card-title">Creditos y Licencia</h2>
+            <div class="d-flex justify-content-center m-4"><img src="../../../assets/img/licencia.png"/></div>
             <p class="card-text">Este obra está bajo una licencia de Creative Commons Reconocimiento-SinObraDerivada 4.0
                 Internacional. por Kim Asiao y Santiago Martínez
             </p>
@@ -10,7 +11,7 @@
 
     <div>
         <ng-container *ngIf="userLogged">
-            <button class="btn btn-secondary" [routerLink]="['/menu-game,userID']">Back</button>
+            <button class="btn btn-secondary" [routerLink]="['/menu-game',userID]">Back</button>
         </ng-container>
         <ng-container *ngIf="!userLogged">
             <button class="btn btn-secondary" routerLink="/">Back</button>
