--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="col mx-auto inputs-lg">
             <div class="card">
                 <div class="card-body d-flex flex-column">
-                    <form [formGroup]="logInForm" (ngSubmit)="logIn(logInForm.value)">
+                    <form [formGroup]="logInForm">
                         <div class="form-group">
                             <input type="text" formControlName="username" name="username" class="form-control"
                                 placeholder="Username" required autofocus />
@@ -18,7 +18,7 @@
 
                         <div class="d-flex justify-content-between">
                             <input type="button" class="btn btn-secondary" value="Back" routerLink="/" />
-                            <input type="submit" class="btn btn-primary" value="Log in" />
+                            <input type="submit" class="btn btn-primary" value="Log in" (click)="logIn(logInForm.value)"/>
                         </div>
                     </form>
                 </div>
