--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,7 +3,7 @@
         <div class="col mx-auto">
             <div class="card">
                 <div class="card-body d-flex flex-column">
-                    <form [formGroup]="signUpForm" (ngSubmit)="signUp(signUpForm.value)">
+                    <form [formGroup]="signUpForm">
                         <div class="form-group">
                             <input type="text" formControlName="username" name="username" class="form-control"
                                 placeholder="Username" required autofocus />
@@ -27,7 +27,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <input type="button" class="btn btn-secondary" value="Back" routerLink="/" />
-                            <input type="submit" class="btn btn-primary" value="Sign up" />
+                            <input type="submit" class="btn btn-primary" value="Sign up" (click)="signUp(signUpForm.value)"/>
                         </div>
                     </form>
                     <input [(ngModel)]="error" class="error-input"/>
