--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       <div class="start-select">
         <div class="select" routerLink="/options" (click)="savePath()">OPTIONS</div>
         <ng-container *ngIf="!userLogged">
-          <div class="start" routerLink="/">START</div>
+          <div class="start" routerLink="/">MENU</div>
         </ng-container>
         <ng-container *ngIf="userLogged">
           <div class="start" [routerLink]="['/menu-game',userID]">MENU</div>
